# weechat-silc

./: .gitignore  CMakeLists.txt  README.asciidoc  commands.c  commands.h  readme.md  silc-bar.c  silc-bar.h  silc-commands.c  silc-commands.h  silc-config.c  silc-config.h  silc-connections.c  silc-connections.h  silc-keys.c  silc-keys.h  silc-modes.c  silc-modes.h  silc-nicklist.c  silc-nicklist.h  silc-notify.c  silc-operations.c  silc-operations.h  silc-plugin.c  silc-plugin.h
